<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Saver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_food">My Food</string>
    <string name="save_food">Save Food</string>
    <string name="title_activity_save_food">Nearby restaurants</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail_food">New food entry</string>
    <string name="detail_food_button">Save</string>
    <string name="title_activity_my_food">Saved entries</string>
    <string name="detail_food_name_label">Where did you go?</string>
    <string name="detail_food_item_label">What did you eat?</string>
    <string name="detail_food_rating_label">Rate it!</string>
    <string name="detail_food_desc_label">Comments?</string>
    <string name="detail_food_desc_default">Remember to ask for sambal sauce!</string>
    <string name="detail_food_item_default">Fish tacos</string>
    <string name="restaurant_not_found_button">Don\'t see your restaurant?</string>
    <string name="title_activity_my_item">Item entry</string>
    <string name="save_entry">Go on</string>
    <string name="cancel">Cancel</string>
    <string name="warning_entry">I understand</string>
    <string name="empty_warning_message">"Next time you should include a restaurant name"</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this entry?</string>
    <string name="dialog_name_hint">Enter name</string>
    <string name="dialog_address_hint">Enter address</string>


</resources>
